fix: Fixed the broken design on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -15,17 +15,40 @@ body {
   padding: 0;
 }
 
-.slick-arrow::before {
-  color: var(--green)!important;
-  font-size: 64px!important;
-}
 
 .lock-scroll {
   overflow: hidden;
+}
+
+/* Overriding the default slick design */
+
+.slick-arrow::before {
+  color: var(--green)!important;
+  font-size: 64px!important;
 }
 
 .slick-list {
   align-self: center;
   width: 80%;
   padding: 0!important;
+}
+
+@media screen and (max-width: 992px) {
+  .slick-arrow::before {
+    color: var(--green)!important;
+    font-size: 32px!important;
+  }
+  .slick-prev {
+    left: 8px!important;
+  }
+  .slick-next {
+    right: 8px!important;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .slick-arrow::before {
+    color: var(--green)!important;
+    font-size: 32px!important;
+  }
 }
