--- a/css/home.css
+++ b/css/home.css
@@ -62,6 +62,12 @@
 }
 
 @media screen and (max-width: 992px) {
+  .home {
+    background-color: var(--green);
+    height: 100vh;
+    padding-right: 6rem;
+    padding-left: 6rem;
+  }
   .home--right {
     display: none;
   }
@@ -91,5 +97,42 @@
 }
 
 @media screen and (max-width: 600px) {
+  .home {
+    padding-right: 2rem;
+    padding-left: 2rem;
+   }
+   .home--left {
+    justify-content: center;
+    align-items: center;
+   }
+  .home--heading {
+    font-size: 36px;
+  }
   
+  .home--content {
+    font-size: 18px;
+  }
+  .home--search {
+    width: 200px;
+    height: 42px;
+    font-size: 12px;
+    color: #929292;
+    border-bottom-left-radius: 12px;
+    border-top-left-radius: 12px;
+    border: none;
+    padding-left: 18px;
+    outline: none;
+  }
+  
+  .home--button {
+    color: var(--white);
+    background-color: var(--yellow);
+    border: none;
+    height: 42px;
+    width: 80px;
+    border-bottom-right-radius: 12px;
+    border-top-right-radius: 12px;
+    font-size: 12px;
+    cursor: pointer;
+  }
 }
